# rave

./: README.md
android/: README.md  versions.gradle
android/app/: build.gradle
android/app/schemas/net.commotionwireless.ravedbtest2.db.RaveDatabase/: 1.json
android/app/src/androidTest/java/net/commotionwireless/ravedbtest2/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/commotionwireless/ravedbtest2/: AppExecutors.java  BasicApp.java  DataRepository.java
android/app/src/main/java/net/commotionwireless/ravedbtest2/db/: DataGenerator.java  RaveDatabase.java
android/app/src/main/java/net/commotionwireless/ravedbtest2/db/converter/: DateConverter.java
android/app/src/main/java/net/commotionwireless/ravedbtest2/model/: RaveMessage.java  RaveNode.java
android/app/src/main/java/net/commotionwireless/ravedbtest2/ui/: BindingAdapters.java  MainActivity.java  MessageAdapter.java  MessageClickCallback.java  NodeAdapter.java  NodeClickCallback.java  NodeFragment.java  NodeListFragment.java
android/app/src/main/java/net/commotionwireless/ravedbtest2/viewmodel/: NodeListViewModel.java  NodeViewModel.java
android/app/src/main/res/layout/: activity_main.xml  list_fragment.xml  message_item.xml  node_fragment.xml  node_item.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
android/app/src/test/java/net/commotionwireless/ravedbtest2/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
docs/: INDEX.md  README.md
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
(+4 files in other folders)
